# pedestrian-detection-1

src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/nms_demo/: CMakeLists.txt  nms_main.cpp
src/demos/pd_demo/: CMakeLists.txt  pd_main.cpp
src/hog/: CMakeLists.txt  hog.cpp  hog.h
src/nms/: CMakeLists.txt  nms.cpp  nms.h  rect_with_score.cpp  rect_with_score.h
src/svm/: CMakeLists.txt  svm.cpp  svm.h
